# etl-sqlite-postgres-boilerplate

./: .env.example  .flake8  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
src/: main.py  middleware.py
src/api/: routers.py
src/api/v1/: etl.py  postgres.py  sqlite.py
src/core/: colored_formatter.py  config.py  error_messages.py  log_conf.yaml  logger.py
src/db/: db.py  postgres.sql
src/schemas/: custom_base_model.py  postgres.py  schemas_tables.py  users.py
src/service/: etl.py  postgres.py  sqlite.py
tests/: tests.py
